--- a/skin.html
+++ b/skin.html
@@ -436,9 +436,9 @@
 				
 				<s_sidebar_element>
 				<!-- 최근 댓글 모듈 -->
-				<div id="recentComment">
+				<div id="recentComments">
 					<h3>최근에 달린 댓글</h3>
-					<ul id="recentComments">
+					<ul>
 						<s_rctrp_rep>
 						<li>
 							<a href="[##_rctrp_rep_link_##]">[##_rctrp_rep_desc_##].</a>
