Fuzzy search comment

--- a/Lists.html
+++ b/Lists.html
@@ -86,7 +86,19 @@
 Fuzzy search 구현해놓음 : <button id="out-focus" onclick='$("#fuzzy-search-container").show(); $("#fuzzy-search").focus();'>Fuzzy search</button> 버튼이나 <code>G</code> 키를 누르면 검색창 뜹니다. <code>ESC</code> 나 오른쪽 위 'x' 를 누르면 검색창이 닫힙니다. Fuzzy (흐릿한, 뿌연) search 가 어떤식으로 동작하는지는 쓰시면서 확인해 보시길... (뭐 장황한 설명보단 사용해 보시면서 느끼고, 익히시는게 더 이해가 잘 될듯 합니다. 음.. 한글 초성검색도 구현해놔야 하나;;;)
 </div>
 
-블로그 <cite class="ref-kipid"></cite> 글들 리스트를 정리해 놓은 것입니다. 제목뒤 날짜는 보통 처음 글을 올린 날짜입니다. (올려놓고 꾸준히 업데이트하는 글들이 많아서...) 공들여 작성한 글은 <a id="highlight" href="#highlight" class="emph">highlight</a> 함.
+###/
+fuzzy 에 더 가까운가를 function 이용해서 정렬할수도 있는듯?
+
+###/
+Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
+갤s 에선 div contenteditable 이 안먹히나?
+
+###/
+스마트폰 (갤노트, 갤s4 등) 에서 text 입력창 들어가면 어느 경우에 확대가 되는거지? ㅡ..ㅡ;;;
+이거 지멋대로 동작하게 만들어놨네.
+글씨 크기가 16px(?) 이하이면 자동으로 화면 자체가 확대되도록 만들어 놓은듯?
+
+블로그 <cite class="ref-kipid"></cite> 글들 리스트를 정리해 놓은 것입니다. 제목뒤 날짜는 보통 처음 글을 올린 날짜입니다. (올려놓고 꾸준히 업데이트하는 글들이 많아서...) 공들여 작성한 글은 <a href="#highlight" class="emph">highlight</a> 함.
 
 단축키 (T: Table of Contents, F: Forward Section, D: Previous Section) 도 활용해 보시길.
 
